# oarepo-model-builder-relations

./: .env  .gitignore  README.md  format.sh  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  main.yml  push.yaml
oarepo_model_builder_relations/: builders.py  components.py  datatypes.py
tests/: conftest.py  referred.yaml  referrer.yaml  test_internal_link.py  test_relation_defaults.py
tests/referred/: setup.cfg
tests/referred/data/: sample_data.yaml
tests/referred/referred/: cli.py  config.py  ext.py  proxies.py  views.py
tests/referred/referred/models/: model.json
tests/referred/referred/records/: api.py  dumper.py  models.py
tests/referred/referred/records/jsonschemas/: referred-1.0.0.json
tests/referred/referred/records/mappings/os-v2/referred/: referred-1.0.0.json
tests/referred/referred/resources/records/: config.py  resource.py  ui.py
tests/referred/referred/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
tests/referrer/: setup.cfg
tests/referrer/referrer/: cli.py  config.py  ext.py  proxies.py  views.py
tests/referrer/referrer/models/: model.json
tests/referrer/referrer/records/: api.py  dumper.py  models.py
tests/referrer/referrer/records/jsonschemas/: referrer-1.0.0.json
tests/referrer/referrer/records/mappings/os-v2/referrer/: referrer-1.0.0.json
tests/referrer/referrer/resources/records/: config.py  resource.py  ui.py
tests/referrer/referrer/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py  ui_schema.py
