

[metadata]
name = referred
version = 1.0.0
description = A sample application for referred
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = referred = referred.ext:ReferredExt
invenio_base.apps = referred = referred.ext:ReferredExt
invenio_db.alembic = referred = referred:alembic
invenio_db.models = referred = referred.records.models
invenio_base.api_blueprints = referred = referred.views:create_blueprint_from_app_referred
invenio_search.mappings = referred = referred.records.mappings
invenio_jsonschemas.schemas = referred = referred.records.jsonschemas
oarepo.models = referred = referred.models:model.json
flask.commands = referred = referred.cli:group
