

[metadata]
name = referrer
version = 1.0.0
description = A sample application for referrer
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = referrer = referrer.ext:ReferrerExt
invenio_base.apps = referrer = referrer.ext:ReferrerExt
invenio_db.alembic = referrer = referrer:alembic
invenio_db.models = referrer = referrer.records.models
invenio_base.api_blueprints = referrer = referrer.views:create_blueprint_from_app_referrer
invenio_search.mappings = referrer = referrer.records.mappings
invenio_jsonschemas.schemas = referrer = referrer.records.jsonschemas
oarepo.models = referrer = referrer.models:model.json
flask.commands = referrer = referrer.cli:group
